--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -20,19 +20,13 @@
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <!-- Create Quiz Link -->
                          <li>
-                            <a class="dropdown-item" href="{{ path('app_quiz_new') }}">
+                            <a class="dropdown-item" href="{{ path('app_livre_index') }}">
                                 Browse Books
                             </a>
                         </li>
                         <li>
-                            <a class="dropdown-item" href="{{ path('app_quiz_new') }}">
-                                Create Quiz
-                            </a>
-                        </li>
-                        <!-- Create Book Link -->
-                        <li>
-                            <a class="dropdown-item" href="{{ path('app_livre_new') }}">
-                                Create Book
+                            <a class="dropdown-item" href="{{ path('app_quiz_setup') }}">
+                                create a quiz for a book
                             </a>
                         </li>
                     </ul>
