--- a/templates/livre/edit.html.twig
+++ b/templates/livre/edit.html.twig
@@ -74,8 +74,8 @@
                         <!-- FichierUrl Field -->
                         <div class="col-lg-6 col-md-6 col-12">
                             <div class="form-floating">
-                                {{ form_widget(form.fichierUrl, {'attr': {'class': 'form-control', 'placeholder': 'Fichier URL'}}) }}
-                                {{ form_label(form.fichierUrl, 'Fichier URL', {'label_attr': {'class': 'form-label'}}) }}
+                                {{ form_widget(form.file, {'attr': {'class': 'form-control', 'placeholder': 'Fichier URL'}}) }}
+                                {{ form_label(form.file, 'Fichier URL', {'label_attr': {'class': 'form-label'}}) }}
                             </div>
                         </div>
 
